<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Added by Xiaolu -->
    <string name="logo">logo</string>
    <string name="spaceholder">spaceholder</string>
    <string name="app_name">Virtual Receipt</string>

    <string-array name="menu_items">
        <item>@string/add_income</item>
        <item>@string/add_receipt</item>
        <item>@string/view_receipt</item>
        <item>@string/spending_stats</item>
        <item>@string/dropbox</item>
    </string-array>

    <string name="no_items">No menu items</string>
    <string name="click">Click</string>
    <string name="add_receipt">Add Expense</string>
    <string name="view_receipt">View Entries</string>
    <string name="spending_stats">View spending statistics</string>
    <string name="dropbox">Sync with dropbox</string>
    <string name="ocr">OCR Text</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose one:</string>
    <string name="payment_method">Payment Method</string>
    <string name="recurring">Recurring Expense</string>
    <string name="recurring_income">Recurring</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="view_image">View Image</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="reselect">Reselect</string>
    <string name="no_receipts">No Receipt Entries Yet</string>
    <string name="menu_insert_receipt">Add Receipt</string>
    <string name="menu_delete_receipt">Delete Receipt</string>
    <string name="no_categories">No Categories Yet</string>
    <string name="menu_insert">Add Category</string>
    <string name="menu_delete">Delete Category</string>
    <string name="menu_edit">Edit Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="confirm">Confirm</string>
    <string name="category_graph">Spending By Category</string>
    <string name="payment_type_graph">Spending By Payment Type</string>
    <string name="date_graph">Spending By Month</string>
    <string name="capture_title">Capture Receipt Image</string>
    <string name="capture">Capture</string>
    <string name="cancel">Cancel</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="add_income">Add Income/ Budget</string>
    <string name="add_income_Toast">With this option, you can enter your income or set your budget</string>
    <string name="add_receipt_Toast">With this option, you can enter expenditure details either by taking a snapshot of the receipt or you could enter manually</string>
    <string name="view_receipt_Toast">With this option, you can view all the previous entries for income and expenditures incurred</string>
    <string name="spending_stats_Toast">With this option, you can view various statistics for income and expenditue</string>
    <string name="dropbox_Toast">With this option, you can sync your data to your dropbox account</string>
    <string name="swipe">\u0020 \u0020 \u0020 \u25C0 swipe on the chart for different spending view  \u25B6</string>
    <string name="info_button">info</string>

</resources>