<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
      <ImageView
         android:id="@+id/entryHeader"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:contentDescription="@string/logo"
         android:gravity="center_vertical"
         android:src="@drawable/entry" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/description" />
    
    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text" />
	    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >
      
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="@string/amount" />
          
        <TextView
            android:layout_width="0dip"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/date" />
            
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            
        <EditText
            android:id="@+id/amount"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
         
        <EditText
            android:id="@+id/date"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:inputType="date" />

    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/category"
        style="@style/ButtonText"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button"
        android:prompt="@string/choose_category" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:text="@string/payment_method" />
    
    <RadioGroup
        android:id="@+id/payment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal" >
      
      <RadioButton
          android:id="@+id/radio_cash"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/cash" />
      
      <RadioButton
          android:id="@+id/radio_credit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/credit" />
      
      <RadioButton
          android:id="@+id/radio_debit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/debit" />
    
    </RadioGroup>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/save"
	        style="@style/ButtonText"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dp"
	        android:background="@drawable/button"
	        android:text="@string/save" />

	        <!-- android:onClick="onSaveButtonClick" --> 
	    
	    <Button
	        android:id="@+id/clear"
	        style="@style/ButtonText"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:background="@drawable/button"
	        android:onClick="onClearButtonClick"
	        android:text="@string/clear" />
	
	</LinearLayout>
	
</LinearLayout>
</ScrollView>